corretta pagina menu

--- a/views/menu.pug
+++ b/views/menu.pug
@@ -4,4 +4,4 @@ block layout-content
     ul
     each row in results 
       li
-        hi #{row.name} - #{row.description}
+        hi #{row.nome_piatto} - #{row.descrizione_piatto}
