--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,4 @@ html {
 
 button.register {float: right; margin: 5px;}
 button.signin {float:right; margin: 5px}
+button.carrello {float:right; margin: 5px}
