--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,24 +1,21 @@
 extends layout
 
 block layout-content
-  a.cart.btn.btn-danger(href="/cart" role='button') Carrello
-    span.badge.bg-light #{orders}
+  button.carrello.btn.btn-danger(type='button') Carrello
+    span.badge.badge-light 0
   div.container
   each st in sottogruppi
     h1 #{st}
     - var row_items = 0
     each dish in results.get(st)
-      - if(row_items % 4 == 0){
-        - if(row_items != 0)
-          </div>
-        <div class="row">
-      - }
+      - if(row_items % 4 == 0)
+        div.row
+
+      - row_items++
           .col
             div.card(style="width: 18rem;")
               img.card-img-top(src="/images/" + dish.foto  alt="Card image cap")
               div.card-body
                 h5.card-title #{dish.nome}
                 p.card-text #{dish.descrizione}
-                a.btn.btn-primary(onclick= "addDish(" + dish.id + ", addedToCart())") Aggiungi al carrello
-      - row_items++
-    </div>
+                a.btn.btn-primary(onclick= "orderDishes(" + dish.id + ")") Aggiungi al carrello
