--- a/views/welcomepage.pug
+++ b/views/welcomepage.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block layout-content
-  button.signin.btn.btn-primary(onclick="location.href='./signin'") Accedi
-  button.register.btn.btn-primary(onclick="location.href='./register'") Registrati
-  button.menu.btn.btn-primary(onclick="location.href='./menu'") Menù
+  button.signin.btn.btn-danger(onclick="location.href='./signin'") Accedi
+    i.bi-alarm
+  button.register.btn.btn-danger(onclick="location.href='./register'") Registrati
+  button.menu.btn.btn-danger(onclick="location.href='./menu'") Menù
