--- a/views/welcomepage.pug
+++ b/views/welcomepage.pug
@@ -1,7 +1,12 @@
-extends layout
+extends layout_welcomepage
 
 block layout-content
-  button.signin.btn.btn-danger(onclick="location.href='./signin'") Accedi
-    i.bi-alarm
-  button.register.btn.btn-danger(onclick="location.href='./register'") Registrati
+  - if(profilo){
+      button.signin.btn.btn-danger(onclick="location.href='./signin'") Accedi
+        i.bi-alarm
+      button.register.btn.btn-danger(onclick="location.href='./register'") Registrati
+  - }
   button.menu.btn.btn-danger(onclick="location.href='./menu'") Menù
+  - if(!profilo){
+      a.logout.btn.btn-danger(href="/logout") Log Out
+  - }
