--- a/views/welcomepage.pug
+++ b/views/welcomepage.pug
@@ -8,5 +8,6 @@ block layout-content
   - }
   button.menu.btn.btn-danger(onclick="location.href='./menu'") Menù
   - if(!profilo){
+      a.storico.btn.btn-danger(href="/storico") Storico
       a.logout.btn.btn-danger(href="/logout") Log Out
   - }
