--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,3 +19,4 @@ button.register {float: right; margin: 5px;}
 button.signin {float:right; margin: 5px}
 a.cart {float:right; margin: 5px}
 a.logout {float: right; margin:5px;}
+a.storico {float: right; margin: px;}
