--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+/*
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -6,14 +7,16 @@ body {
 a {
   color: #00B7FF;
 }
-
-html { 
+*/
+/*
+body { 
   background: url(/images/backgroud_site.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+*/
 
 button.register {float: right; margin: 5px;}
 button.signin {float:right; margin: 5px}
