--- a/public/stylesheets/welcomepage.css
+++ b/public/stylesheets/welcomepage.css
@@ -1,7 +1,14 @@
-html { 
-    background: url(/images/welcome.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
+body { 
+  background: url(/images/welcome.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/*
+div.main{ 
+  background: url(/images/welcome.jpg) no-repeat center center;
+  height: 100vh;
+}
+*/
