--- a/views/welcomepage.pug
+++ b/views/welcomepage.pug
@@ -2,15 +2,17 @@ extends layout_welcomepage
 
 block layout-content
   - if(!profilo){
-      button.signin.btn.btn-danger(onclick="location.href='./signin'") Accedi
+      button.signin.btn.btn-danger.position-absolute.top-0.end-0(onclick="location.href='./signin'") Accedi
         svg.bi(width="32" height="32" fill="currentColor")
-          use(xlink:href="bootstrap-icons.svg#heart-fill")
-      button.register.btn.btn-danger(onclick="location.href='./register'") Registrati
+          use(xlink:href="bootstrap-icons.svg#person-fill")
   - }
-  button.menu.btn.btn-danger(onclick="location.href='./menu'") Menù
+
+  .d-flex.flex-column.min-vh-100.justify-content-center.align-items-center
+      button.menu.btn.btn-danger(onclick="location.href='./menu'") Menù
+  
   - if(profilo){
       a.storico.btn.btn-danger(href="/storico") Storico
       a.logout.btn.btn-danger(href="/logout") Log Out
-        svg.bi(width="32" height="32")
+        svg.bi(width="32" height="32" fill="currentColor")
           use(xlink:href="bootstrap-icons.svg#heart-fill")
   - }
