--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ a {
   color: #00B7FF;
 }
 */
-/*
+
 body { 
   background: url(/images/backgroud_site.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -16,9 +16,8 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-*/
+.white{color:white;}
 
-button.register {float: right; margin: 5px;}
 button.signin {float:right; margin: 5px}
 a.cart {float:right; margin: 5px}
 a.logout {float: right; margin:5px;}
