--- a/views/menu.pug
+++ b/views/menu.pug
@@ -5,7 +5,7 @@ block layout-content
     span.badge.bg-light(style="margin-left: 5px; color: black;") #{orders}
   div.container
   each st in sottogruppi
-    h1 #{st}
+    h1.white #{st}
     - var row_items = 0
     each dish in results.get(st)
       - if(row_items % 4 == 0){
