--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 /*
 body {
   padding: 50px;
@@ -17,8 +18,65 @@ body {
   background-size: cover;
 }
 .white{color:white;}
-
+@import url(https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+/*
 button.signin {float:right; margin: 5px}
 a.cart {float:right; margin: 5px}
 a.logout {float: right; margin:5px;}
 a.storico {float: right; margin: px;}
+*/
+
+.rating>[id^="star"] {
+  display: none
+}
+/*
+.rating>label:before {
+  margin: 5px;
+  background-image: url(/bootstrap-icons.svg#star-fill);
+  width: 64px;
+  height: 64px;
+  
+  font-size: 2.25em;
+  font-family: FontAwesome;
+  
+  display: inline-block;
+  content: "\f005"
+}
+*/
+
+.rating>label.bi-star-fill:before{
+  line-height: 24px;
+}
+
+.rating>.bi-star-half:before {
+  position: absolute;
+  line-height: 24px;
+  max-width: 8px;
+  overflow: hidden;
+}
+
+.rating>label {
+  color: #ddd;
+  float: right
+}
+
+.rating>[id^="star"]:checked~label,
+.rating:not(:checked)>label:hover,
+.rating:not(:checked)>label:hover~label {
+  color: #FFD700
+}
+
+.rating>[id^="star"]:checked+label:hover,
+.rating>[id^="star"]:checked~label:hover,
+.rating>label:hover~[id^="star"]:checked~label,
+.rating>[id^="star"]:checked~label:hover~label {
+  color: #FFED85
+}
+
+i.yellow-star{
+  color: #FFD700
+}
+
+i.grey-star{
+  color: #ddd
+}
