--- a/public/stylesheets/welcomepage.css
+++ b/public/stylesheets/welcomepage.css
@@ -14,6 +14,8 @@ div.main{
 */
 
 /*button.signin {float:right; margin: 5px}*/
+/*
 a.cart {float:right; margin: 5px}
 a.logout {float: right; margin:5px;}
 a.storico {float: right; margin: px;}
+*/
