--- a/views/layout_welcomepage.pug
+++ b/views/layout_welcomepage.pug
@@ -4,6 +4,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
 
+    link(rel="icon" type="image/png" href="/images/sushi.png")
     title= title
     link(rel='stylesheet', href='/stylesheets/welcomepage.css')
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous")
